# koto

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docs  justfile
core/bytecode/: Cargo.toml
core/bytecode/src/: chunk.rs  compiler.rs  instruction.rs  instruction_reader.rs  lib.rs  loader.rs  op.rs
core/bytecode/tests/: compile_failures.rs
core/koto/: Cargo.toml
core/koto/benches/: koto_benchmark.rs
core/koto/src/: error.rs  koto.rs  lib.rs  prelude.rs
core/koto/tests/: docs_examples.rs  koto_tests.rs  repl_mode_tests.rs
core/lexer/: Cargo.toml
core/lexer/src/: lexer.rs  lib.rs
core/memory/: Cargo.toml
core/memory/src/: lib.rs
core/memory/src/rc/: mod.rs  ptr.rs  ptr_mut.rs
core/parser/: Cargo.toml
core/parser/src/: ast.rs  constant_index.rs  constant_pool.rs  error.rs  lib.rs  node.rs  parser.rs
core/parser/tests/: parser_tests.rs  parsing_failures.rs
core/runtime/: Cargo.toml
core/runtime/src/: display.rs  display_context.rs  error.rs  external_function.rs  external_value.rs  frame.rs  int_range.rs  lib.rs  meta_map.rs  meta_map_builder.rs  object.rs  prelude.rs  stdio.rs  string_builder.rs  value.rs  value_iterator.rs  value_key.rs  value_list.rs  value_map.rs  value_number.rs  value_string.rs  value_tuple.rs  vm.rs
core/runtime/src/core/: io.rs  iterator.rs  koto.rs  list.rs  map.rs  number.rs  os.rs  string.rs  test.rs  tuple.rs
core/runtime/src/core_lib/: io.rs  iterator.rs  koto.rs  list.rs  map.rs  mod.rs  number.rs  os.rs  range.rs  string.rs  test.rs  tuple.rs  value_sort.rs
core/runtime/src/io/: buffered_file.rs  file.rs  stdio.rs
core/runtime/src/types/: external_function.rs  function.rs  int_range.rs  iterator.rs  list.rs  map.rs  meta_map.rs  mod.rs  native_function.rs  number.rs  object.rs  range.rs  value.rs  value_iterator.rs  value_key.rs  value_list.rs  value_map.rs  value_number.rs  value_string.rs  value_tuple.rs
core/runtime/tests/: external_value_tests.rs  iterator_tests.rs  object_tests.rs  runtime_failures.rs  runtime_test_utils.rs  stdout.rs  vm_tests.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  compiler.rs  frame.rs  instruction.rs  instruction_reader.rs  lib.rs  loader.rs  module_loader.rs  op.rs
crates/bytecode/tests/: compile_failures.rs
crates/cli/: Cargo.toml
crates/cli/docs/: README.md  about.md  api.md  cli.md  language_guide.md
crates/cli/docs/.obsidian/: appearance.json  workspace.json
crates/cli/docs/core_lib/: io.md  iterator.md  koto.md  list.md  map.md  number.md  os.md  range.md  string.md  test.md  tuple.md
crates/cli/docs/libs/: color.md  geometry.md  json.md  random.md  regex.md  tempfile.md  toml.md  yaml.md
crates/cli/src/: help.rs  main.rs  render_export_map.koto  repl.rs
crates/cli/tests/: eval_tests.rs  run_script.rs  stdin_tests.rs
crates/derive/: Cargo.toml
crates/derive/src/: attributes.rs  function.rs  koto_copy.rs  koto_impl.rs  koto_type.rs  lib.rs  overloading.rs
crates/format/: Cargo.toml
crates/format/src/: error.rs  format.rs  lib.rs  options.rs  trivia.rs
crates/format/tests/: format_tests.rs
crates/koto/: Cargo.toml
crates/koto/benches/: koto_benchmark.rs
crates/koto/examples/: args.rs  disabling_type_checks.rs  exported_values.rs  hello_world.rs  koto_function.rs  module.rs  prelude_value.rs  prelude_value_insert.rs  prelude_value_remove.rs  return_value.rs  rust_function.rs  rust_object.rs  serde.rs  using_koto_in_a_repl.rs
crates/koto/examples/poetry/: Cargo.toml  README.md
crates/koto/src/: error.rs  koto.rs  lib.rs  prelude.rs
crates/koto/tests/: derive_koto_impl_doc.rs  docs_examples.rs  koto_tests.rs  repl_mode_tests.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  span.rs
crates/memory/: Cargo.toml
crates/memory/src/: address.rs  lib.rs  ptr.rs  ptr_mut.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  constant_pool.rs  error.rs  lib.rs  node.rs  parser.rs  string.rs  string_format_options.rs  string_slice.rs
crates/parser/tests/: parser_tests.rs  parsing_failures.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: __private.rs  display_context.rs  error.rs  lib.rs  prelude.rs  send_sync.rs  vm.rs
crates/runtime/tests/: iterator_tests.rs  object_tests.rs  range_tests.rs  runtime_failures.rs  runtime_test_utils.rs  stdout.rs  timeout_tests.rs  vm_tests.rs
crates/serde/: Cargo.toml
crates/serde/src/: deserialize.rs  deserializer.rs  error.rs  lib.rs  serialize.rs  serializer.rs
crates/serialize/: Cargo.toml
crates/serialize/src/: lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: check_script_output.rs  doc_examples.rs  lib.rs  output_capture.rs  run_test_script.rs  script_instructions.rs  type_helpers.rs
examples/poetry/: Cargo.toml
examples/poetry/scripts/: poetry.koto  readme.koto  reference.koto  string_docs.koto
examples/poetry/src/: koto_bindings.rs  main.rs  poetry.rs
examples/wasm/: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
examples/wasm/public/: index.html  index.js  main.js
examples/wasm/src/: lib.rs
libs/color/: Cargo.toml
libs/color/src/: color.rs  lib.rs
libs/color/tests/: color_docs.rs
libs/geometry/: Cargo.toml
libs/geometry/src/: lib.rs  macros.rs  rect.rs  vec2.rs  vec3.rs
libs/geometry/tests/: geometry_docs.rs
libs/http/: Cargo.toml
libs/http/src/: lib.rs
libs/json/: Cargo.toml
libs/json/src/: lib.rs
libs/json/tests/: json.koto  json_docs.rs  json_tests.rs  koto_tests.rs
libs/lib_tests/: Cargo.toml
libs/lib_tests/tests/: lib_tests.rs
libs/random/: Cargo.toml
libs/random/src/: lib.rs
libs/random/tests/: random_docs.rs  random_tests.rs  shuffle.koto  shuffle.rs
libs/regex/: Cargo.toml
libs/regex/src/: lib.rs
libs/regex/tests/: regex_docs.rs
libs/tempfile/: Cargo.toml
libs/tempfile/src/: lib.rs
libs/tempfile/tests/: koto_tests.rs  tempfile.koto  tempfile_docs.rs
libs/toml/: Cargo.toml
libs/toml/src/: lib.rs
libs/toml/tests/: koto_tests.rs  toml.koto  toml_docs.rs  toml_tests.rs
(+443 files in other folders)
