[package]
name = "koto_bytecode"
version = "0.11.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The bytecode compiler used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = []

[dependencies]
koto_memory = { path = "../memory", version = "^0.11.0" }
koto_parser = { path = "../parser", version = "^0.11.0" }

dunce = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
