[package]
name = "koto"
version = "0.13.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple, expressive, embeddable programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = []
panic_on_runtime_error = ["koto_runtime/panic_on_runtime_error"]

[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.13.0" }
koto_parser = { path = "../parser", version = "^0.13.0" }
koto_runtime = { path = "../runtime", version = "^0.13.0" }

dunce = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
koto_geometry = { path = "../../libs/geometry", version = "^0.13.0" }

criterion = { workspace = true }
mimalloc = { workspace = true }
pulldown-cmark = { workspace = true }
test_bin = { workspace = true }

[[bench]]
name = "koto_benchmark"
harness = false
test = true
