[package]
name = "koto_lexer"
version = "0.11.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
description = "The lexer used by the Koto programming language"
homepage = "https://github.com/koto-lang/koto"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
unicode-width = { workspace = true }
unicode-xid = { workspace = true }
