[package]
name = "koto_parser"
version = "0.13.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The parser used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
koto_lexer = { path = "../lexer", version = "^0.13.0" }
koto_memory = { path = "../memory", version = "^0.13.0" }

thiserror = { workspace = true }

[features]
default = []

# Can be useful during development, e.g. when an error backtrace would be desirable
panic_on_parser_error = []
