[package]
name = "koto_runtime"
version = "0.11.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
description = "The runtime used by the Koto programming language"
homepage = "https://github.com/koto-lang/koto"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = []
panic_on_runtime_error = []

[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.11.0" }
koto_lexer = { path = "../lexer", version = "^0.11.0" }
koto_memory = { path = "../memory", version = "^0.11.0" }
koto_parser = { path = "../parser", version = "^0.11.0" }

downcast-rs = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = {version = "0.4.19", features = ["wasmbind"]}
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
