[package]
name = "koto_bytecode"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The bytecode compiler used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = ["arc"]
arc = ["koto_memory/arc"]
rc = ["koto_memory/rc"]

[dependencies]
koto_memory = { path = "../memory", version = "^0.15.0", default-features = false }
koto_parser = { path = "../parser", version = "^0.15.0", default-features = false }

derive-name = { workspace = true }
dunce = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
