[package]
name = "koto_bytecode"
version = "0.17.0"
description = "The bytecode compiler used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_memory/arc"]
rc = ["koto_memory/rc"]

[dependencies]
koto_memory = { path = "../memory", version = "^0.17.0", default-features = false }
koto_parser = { path = "../parser", version = "^0.17.0", default-features = false }

circular-buffer = { workspace = true }
derive-name = { workspace = true }
dunce = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
