[package]
name = "koto_cli"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A CLI and script runner for the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[[bin]]
name = "koto"
path = "src/main.rs"

[dependencies]
koto = { path = "../koto", version = "^0.15.0" }
koto_color = { path = "../../libs/color", version = "^0.15.0" }
koto_geometry = { path = "../../libs/geometry", version = "^0.15.0" }
koto_json = { path = "../../libs/json", version = "^0.15.0" }
koto_random = { path = "../../libs/random", version = "^0.15.0" }
koto_regex = { path = "../../libs/regex", version = "^0.15.0" }
koto_tempfile = { path = "../../libs/tempfile", version = "^0.15.0" }
koto_toml = { path = "../../libs/toml", version = "^0.15.0" }
koto_yaml = { path = "../../libs/yaml", version = "^0.15.0" }

anyhow = { workspace = true }
crossterm = { workspace = true }
home = { workspace = true }
indexmap = { workspace = true }
mimalloc = { workspace = true }
pico-args = { workspace = true }
pulldown-cmark = { workspace = true }
rustyline = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
test_bin = { workspace = true }
