[package]
name = "koto_cli"
version = "0.15.3"
description = "A CLI and script runner for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto/arc"]
rc = ["koto/rc"]

[[bin]]
name = "koto"
path = "src/main.rs"

[dependencies]
koto = { path = "../koto", version = "^0.15.3", default-features = false }
koto_color = { path = "../../libs/color", version = "^0.15.3", default-features = false }
koto_geometry = { path = "../../libs/geometry", version = "^0.15.3", default-features = false }
koto_json = { path = "../../libs/json", version = "^0.15.3", default-features = false }
koto_random = { path = "../../libs/random", version = "^0.15.3", default-features = false }
koto_regex = { path = "../../libs/regex", version = "^0.15.3", default-features = false }
koto_tempfile = { path = "../../libs/tempfile", version = "^0.15.3", default-features = false }
koto_toml = { path = "../../libs/toml", version = "^0.15.3", default-features = false }
koto_yaml = { path = "../../libs/yaml", version = "^0.15.3", default-features = false }

anyhow = { workspace = true }
home = { workspace = true }
indexmap = { workspace = true }
mimalloc = { workspace = true }
pico-args = { workspace = true, features = [
  "combined-flags",
  "short-space-opt",
] }
pulldown-cmark = { workspace = true }
rustyline = { workspace = true, features = ["with-file-history"] }
textwrap = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, features = ["windows"] }

[target.'cfg(unix)'.dependencies]
crossterm = { workspace = true }

[dev-dependencies]
test_bin = { workspace = true }
