[package]
name = "koto_cli"
version = "0.17.0"
description = "A CLI and script runner for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto/arc", "koto/serde"]
rc = ["koto/rc", "koto/serde"]

[[bin]]
name = "koto"
path = "src/main.rs"

[dependencies]
koto = { workspace = true }
koto_format = { workspace = true }

koto_color = { workspace = true }
koto_geometry = { workspace = true }
koto_json = { workspace = true }
koto_random = { workspace = true }
koto_regex = { workspace = true }
koto_tempfile = { workspace = true }
koto_toml = { workspace = true }
koto_yaml = { workspace = true }

anyhow = { workspace = true }
home = { workspace = true }
indexmap = { workspace = true }
mimalloc = { workspace = true }
pico-args = { workspace = true, features = [
  "combined-flags",
  "short-space-opt",
] }
pulldown-cmark = { workspace = true }
rustyline = { workspace = true, features = ["with-file-history"] }
serde = { workspace = true, features = ["derive"] }
textwrap = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, features = ["windows"] }

[target.'cfg(unix)'.dependencies]
crossterm = { workspace = true }

[dev-dependencies]
test_bin = { workspace = true }
