[package]
name = "koto_derive"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Macros for working with the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
