[package]
name = "koto"
version = "0.15.3"
description = "A simple, expressive, embeddable programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]


[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.15.3", default-features = false }
koto_parser = { path = "../parser", version = "^0.15.3", default-features = false }
koto_runtime = { path = "../runtime", version = "^0.15.3", default-features = false }

thiserror = { workspace = true }

[dev-dependencies]
koto_geometry = { path = "../../libs/geometry", default-features = false }
koto_test_utils = { path = "../test_utils", default-features = false }

anyhow = { workspace = true }
criterion2 = { workspace = true }
dunce = { workspace = true }
mimalloc = { workspace = true }

[[bench]]
name = "koto_benchmark"
harness = false
test = true
