[package]
name = "koto"
version = "0.17.0"
description = "A simple, expressive, embeddable programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc", "serde"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

# Enable serde support
serde = ["koto_serde"]

[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.17.0", default-features = false }
koto_parser = { path = "../parser", version = "^0.17.0", default-features = false }
koto_runtime = { path = "../runtime", version = "^0.17.0", default-features = false }
koto_serde = { path = "../serde", version = "^0.17.0", default-features = false, optional = true }

thiserror = { workspace = true }

[dev-dependencies]
koto_geometry = { path = "../../libs/geometry", default-features = false }
koto_test_utils = { path = "../test_utils", default-features = false }

anyhow = { workspace = true }
criterion = { workspace = true }
dunce = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "koto_benchmark"
harness = false
test = true
