[package]
name = "koto_lexer"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The lexer used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
unicode-xid = { workspace = true }
