[package]
name = "koto_lexer"
version = "0.17.0"
description = "The lexer used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
unicode-xid = { workspace = true }
