[package]
name = "koto_memory"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Memory management utilities used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["arc"]
# One memory management scheme can be enabled at a time
arc = ["parking_lot"]
rc = []

[dependencies]
parking_lot = { workspace = true, optional = true }
