[package]
name = "koto_memory"
version = "0.15.1"
description = "Memory management utilities used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["parking_lot"]
rc = []

[dependencies]
parking_lot = { workspace = true, optional = true }
