[package]
name = "koto_parser"
version = "0.14.1"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The parser used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = ["arc"]
arc = ["koto_memory/arc"]
rc = ["koto_memory/rc"]

# Panicking be useful during development, e.g. to see the backtrace that led to the error
panic_on_parser_error = []

[dependencies]
koto_lexer = { path = "../lexer", version = "^0.14.1" }
koto_memory = { path = "../memory", version = "^0.14.1", default-features = false }

thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
