[package]
name = "koto_runtime"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The runtime used by the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[features]
default = ["arc"]
arc = ["koto_memory/arc"]
rc = ["koto_memory/rc"]

[dependencies]
koto_bytecode = { path = "../bytecode", version = "^0.15.0", default-features = false }
koto_derive = { path = "../derive", version = "^0.15.0" }
koto_lexer = { path = "../lexer", version = "^0.15.0" }
koto_memory = { path = "../memory", version = "^0.15.0", default-features = false }
koto_parser = { path = "../parser", version = "^0.15.0", default-features = false }

downcast-rs = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true }
instant = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }
instant = { workspace = true, features = ["wasm-bindgen"] }

[dev-dependencies]
koto_test_utils = { path = "../test_utils" }
test-case = { workspace = true }
