[package]
name = "koto_serialize"
version = "0.15.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Serde serialization support for the Koto programming language"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/koto"
keywords = ["scripting", "language", "koto"]

[dependencies]
serde = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false
