[package]
name = "koto_serialize"
version = "0.15.0"
description = "Serde serialization support for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false
