[package]
name = "koto_test_utils"
version = "0.15.0"
description = "Testing utilities for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
itertools = { workspace = true }
pulldown-cmark = { workspace = true }

[dependencies.koto_bytecode]
path = "../../crates/bytecode"
version = "^0.15.0"
default-features = false

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.0"
default-features = false
