[package]
name = "koto_test_utils"
version = "0.15.2"
description = "Testing utilities for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use `arc`, default features must be disabled.
arc = ["koto_runtime/arc"]
rc = ["koto_runtime/rc"]

[dependencies]
itertools = { workspace = true }
pulldown-cmark = { workspace = true }

[dependencies.koto_bytecode]
path = "../../crates/bytecode"
version = "^0.15.2"
default-features = false

[dependencies.koto_runtime]
path = "../../crates/runtime"
version = "^0.15.2"
default-features = false
