[package]
name = "koto_poetry"
version = "0.7.0"
authors = ["irh <ian.r.hobson@gmail.com>"]
edition = "2018"
autobins = false
publish = false

[[example]]
name = "poetry"
path = "src/main.rs"

[dependencies]
hotwatch = "0.4.5"
indexmap = "1.6.0"
koto = { path = "../../src/koto", version = "^0.7.0"}
koto_random = { path = "../../libs/random", version = "^0.7.0"}
lazy_static = "1.4.0"
pico-args = "0.3.4"
rand = "0.7.3"
